@@ -1,3 +1,12 @@
+[b][color=orange]v4.59 for Shadowland PrePatch[/color], 22.10.2020[/b][list]
+[*]Fix a green icon on my RaidManager. I remove by accident a texture
+[*]More updates to the MicroBar: Fix stuttering/lags
+[*]The MicroBar also shows now the time datatext from ElvUI
+[*]Updated my AutoButtons
+[*]Updated the ChatBar
+[*]Added a mover for the Buff Reminder[/list]
+
+
 [b][color=orange]v4.58 for Shadowland PrePatch[/color], 17.10.2020[/b][list]
 [*]More fixes/updates to my new MicroBar -> own Option-Category
 [*]Fixed an error with the ActionBarProfile skin
